--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
   }
