--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^0.48.6",
+    "flowbite-svelte-icons": "^2.1.1",
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
     "tailwindcss": "^4.0.0",
