--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/google.accounts": "^0.0.15",
     "flowbite": "^3.1.2",
     "flowbite-svelte": "^0.48.6",
     "flowbite-svelte-icons": "^2.1.1",
