--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@react-oauth/google": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
