--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@react-oauth/google": "^0.12.1",
+    "jotai": "^2.12.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
