--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-oauth/google": "^0.12.1",
     "jotai": "^2.12.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "smol-toml": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
