--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@react-oauth/google": "^0.12.1",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "jotai": "^2.12.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "smol-toml": "^1.3.4"
+    "smol-toml": "^1.3.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
