--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jotai": "^2.12.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.4",
     "smol-toml": "^1.3.4",
     "yup": "^1.6.1"
   },
