--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "jotai": "^2.12.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-drag-drop-files": "^3.0.1",
     "react-number-format": "^5.4.4",
     "smol-toml": "^1.3.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.6.1"
   },
   "devDependencies": {
