--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-drag-drop-files": "^3.0.1",
     "react-number-format": "^5.4.4",
+    "react-snap-carousel": "^0.5.1",
     "smol-toml": "^1.3.4",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.6.1"
