--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-charts": "^8.0.0-beta.3",
     "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@react-oauth/google": "^0.12.1",
     "dayjs": "^1.11.13",
