--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-oauth/google": "^0.12.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "intl-number-parser": "^1.0.5",
     "jotai": "^2.12.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
